crates/api/tests/snapshots/snapshots__library_detail.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "lib1",
    "kind": "movie",
    "metadata_sources": [
      "tmdb"
    ],
    "name": "Lib lib1",
    "origin": "local",
    "roots": [
      "/media"
    ],
    "scan_schedule": "0 0 * * *",
    "sort_articles": [
      "the"
    ],
    "updated_at": "[updated_at]",
    "watcher": "manual"
  },
  "status": 200
}
