crates/api/tests/snapshots/snapshots__library_duplicates.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "id": "d1",
        "kind": "duplicate",
        "paths": [
          "/a.mkv",
          "/b.mkv"
        ],
        "title": {
          "id": "e1",
          "type": "episode"
        }
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
