crates/api/tests/snapshots/snapshots__library_trigger_reread.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": null,
  "status": 202
}
