crates/api/tests/snapshots/snapshots__library_unmatched_candidates.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": [
    {
      "kind": "movie",
      "source": "catalog",
      "target": {
        "kind": "existing",
        "title": {
          "id": "m1",
          "type": "movie"
        }
      },
      "title": "Alpha m1",
      "year": 2020
    }
  ],
  "status": 200
}
