crates/api/tests/snapshots/snapshots__library_update.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "lib1",
    "kind": "tv",
    "metadata_sources": [],
    "name": "Renamed Library",
    "origin": "local",
    "roots": [
      "/media/renamed"
    ],
    "scan_schedule": "0 0 * * *",
    "updated_at": "[updated_at]",
    "watcher": "scheduled"
  },
  "status": 200
}
