crates/api/tests/snapshots/snapshots__library_versions.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "v1",
        "library_id": "lib1",
        "path": "/media/v1.mkv",
        "quality": "sd",
        "size_bytes": 1,
        "title": {
          "id": "m1",
          "type": "movie"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      },
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "v2",
        "library_id": "lib1",
        "path": "/media/v2.mkv",
        "quality": "hd",
        "size_bytes": 1,
        "title": {
          "id": "m1",
          "type": "movie"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      },
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "v3",
        "library_id": "lib1",
        "path": "/media/v3.mkv",
        "quality": "fhd",
        "size_bytes": 1,
        "title": {
          "id": "m1",
          "type": "movie"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      },
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "v4",
        "library_id": "lib1",
        "path": "/media/v4.mkv",
        "quality": "uhd",
        "size_bytes": 1,
        "title": {
          "id": "m1",
          "type": "movie"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      },
      {
        "added_at": "2023-11-14T22:13:26Z",
        "available": true,
        "container": "mkv",
        "duration_ms": 1000,
        "id": "ev1",
        "library_id": "lib1",
        "path": "/media/ev1.mkv",
        "quality": "hd",
        "size_bytes": 1,
        "title": {
          "id": "e1",
          "type": "episode"
        },
        "updated_at": "2023-11-14T22:13:26Z"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 5
  },
  "status": 200
}
